# sradata

./: spot_count.c  test.sh
pkg/: .Rbuildignore  DESCRIPTION~  NAMESPACE  NAMESPACE~  config.status  configure  configure.ac
pkg/.svn/: entries
pkg/.svn/text-base/: DESCRIPTION.svn-base
pkg/R/: sra.R
pkg/R/.svn/: entries
pkg/Work/: Makefile  Makefile~  SRR035464_7_0001_seq.txt  test  test.c  test.c~
pkg/Work/.svn/: entries
pkg/Work/.svn/text-base/: Makefile.svn-base  test.R.svn-base
pkg/autom4te.cache/: output.0  traces.0
pkg/src/: rdriver.c  sra.c
pkg/src/.svn/: entries
pkg/src/.svn/text-base/: Makevars.svn-base  sra.h.svn-base
